--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img class="logo" src="../src/images/logo.png" alt="logo fundación niño y cáncer"></a>
+      <a class="navbar-brand" href="#"><img class="logo" src="../src/images/logo_2.png" alt="logo fundación niño y cáncer"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
