Modificando el logo en la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -127,25 +127,25 @@
   <div class="footer__titulo">
     <h2> Haga su donación </h2>
   </div>
-   <div class="container">  
-     <div>
-       <p> Dirección </p>
-       <p> Tupungato 10070 Vitacura, Santiago de Chile </p>
-       <p> Cta. Cte. </p>
-       <p> Banco BCI N° 85999997 </p>
-     </div>
-     <div>
-       <p> Teléfonos </p>
-       <p> 22170821 - 22170811 / 22170820 </p>
-       <p> RUT </p>
-       <p> 72.169.900-5 </p>
-     </div>
-     <div>
-       <p> Email </p>
-       <p> fundacion@ninoycancer.cl </p>
-       <p> Facebook Twitter Instagram </p>
-     </div>
-     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060796576!2d-70.53933968519188!3d-33.38387450148384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530752339718" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <div  class="row">
+	   <div class="container">  
+	     <div class="col-4">
+	       <p> Dirección </p>
+	       <p> Tupungato 10070 Vitacura, Santiago de Chile </p>
+	       <p> Cta. Cte. </p>
+	       <p> Banco BCI N° 85999997 </p>
+	       <p> Teléfonos </p>
+	       <p> 22170821 - 22170811 / 22170820 </p>
+	       <p> RUT </p>
+	       <p> 72.169.900-5 </p>
+	       <p> Email </p>
+	       <p> fundacion@ninoycancer.cl </p>
+	       <p> Facebook Twitter Instagram </p>
+	     </div>
+	    <div class="col-8">
+	     	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060796576!2d-70.53933968519188!3d-33.38387450148384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530752339718" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+	     </div>	
+	   </div>
    </div>  
 </div><!--Footer-->
 
