--- a/index.html
+++ b/index.html
@@ -57,17 +57,19 @@
 <div class="call container-fluid">
   <!--<div class="container">-->
     <div class="row">
-      <div class="col-2">
-        <img class="img-responsive" src="../src/images/phone.svg" alt="icono de teléfono">
-      </div>
-      <div class="col-6">
-        <p class="call__left-1"> Call center </p>
-        <p class="call__left-2"> Colabora a través de tu cuenta de teléfono </p>
-      </div>
-      <div class="col-4">
-        <p class="call__right"> 2 29478800 </p>
-      </div>
-    </div>  
+	    <div class="container">
+		      <div class="col-2">
+		        <img class="img-responsive" src="../src/images/phone.svg" alt="icono de teléfono">
+		      </div>
+		      <div class="col-6">
+		        <p class="call__left-1"> Call center </p>
+		        <p class="call__left-2"> Colabora a través de tu cuenta de teléfono </p>
+		      </div>
+		      <div class="col-4">
+		        <p class="call__right"> 2 29478800 </p>
+		      </div>
+		    </div>
+	    </div>  
   </div>
 </div><!--CALL-->
 
