Modificando estilos del titulo del bloque footer

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="caption">
         <h3> Renovación de Unidades de Oncología Infantil </h3>
         <p> El Hospital Guillermo Gran Benavente se inauguró en 1944, después del gran terremoto de 1939. Atiende a los pacientes de la 8ª Región recibiendo   unos 60 a 70 pacientes con cáncer o leucemia nuevos por año, lo que es comparable con los grandes hospitales pediátricos de Santiago. </p>
-        <p class="thumbnail_p"><a href="#" class="btn btn-primary" role="button">Leer más</a></p>
+        <p class="thumbnail_p"><a href="#" class="btn_content btn btn-primary" role="button">Leer más</a></p>
       </div>
     </div>
   </div>
@@ -104,8 +104,8 @@
       <img class="img-responsive" src="../src/images/ski.jpg" alt="...">
       <div class="caption">
         <h3> Montaña de la Alegría 2017. Taller de ski.</h3>
-        <p> Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002. Se traduce en "Una Terapia para el Alma". Se realizó como todos los años en Portillo del 21 al 25 de agosto y contó con la participación de 7 jóvenes chilenos, 2 ecuatorianos y 1 de España. Todos amputados de una extremidad inferior, como secuela de su enfermedad.</p>
-        <p class="thumbnail_p"><a href="#" class="btn btn-primary" role="button">Leer más</a></p>
+        <p> Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002. Se traduce en "Una Terapia para el Alma". Se realizó como todos los años en Portillo del 21 al 25 de agosto y contó con la participación de 7 jóvenes chilenos, 2 ecuatorianos y 1 de España. Todos amputados de una extremidad inferior.</p>
+        <p class="thumbnail_p"><a href="#" class="btn_content btn btn-primary" role="button">Leer más</a></p>
       </div>
     </div>
   </div>
@@ -115,8 +115,8 @@
       <img class="img-responsive" src="../src/images/revivir2.jpg" alt="...">
       <div class="caption">
         <h3> Agredecimiento del grupo "Aprendiendo a revivir" </h3>
-        <p class="thumbnail_p"> En el año 2009, comenzamos a realizar reuniones trimestrales con los padres cuyos hijos habían fallecido a causa del cáncer infantil; al principio fue muy dificil, no sabíamos muy bien que ibamos a hacer, ni como lo ibamos a llevar a cabo. Al mes de noviembre del 2014, hemos realizado 18 encuentros. </p>
-        <p><a href="#" class="btn btn-primary" role="button">Leer más</a></p>
+        <p> En el año 2009, comenzamos a realizar reuniones trimestrales con los padres cuyos hijos habían fallecido a causa del cáncer infantil; al principio fue muy dificil, no sabíamos muy bien que ibamos a hacer, ni como lo ibamos a llevar a cabo. Al mes de noviembre del 2014, hemos realizado 18 encuentros. </p>
+        <p class="thumbnail_p"><a href="#" class="btn_content btn btn-primary" role="button">Leer más</a></p>
       </div>
     </div>
   </div>
@@ -126,10 +126,13 @@
 
 <!--Footer-->
 <div class="footer">
-  <div class="footer__titulo">
-    <h2> Haga su donación </h2>
-  </div>
-  <div  class="row">
+	<div class="footer__titulo">
+		<h2> Haga su donación </h2>
+		<p> Realiza ahora tu donación en línea a través del sistema Web Pay Plus de Transbank aportando con tu tarjeta de crédito Visa, Master Card y Magna. o Debito (Redcompra).
+ </p>
+		<p><a href="#" class="btn_footer btn btn-primary" role="button">DEPOSITE AQUÍ</a></p>
+	</div>
+	<div  class="row">
 	   <div class="container">  
 	     <div class="col-4">
 	       <p> Dirección </p>
@@ -148,7 +151,7 @@
 	     	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060796576!2d-70.53933968519188!3d-33.38387450148384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530752339718" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 	     </div>	
 	   </div>
-   </div>  
+	</div> 
 </div><!--Footer-->
 
 
