--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+
   <link rel="stylesheet" type="text/css" href="css/app.css">
 
   </head>
@@ -132,25 +134,24 @@
  </p>
 		<p><a href="#" class="btn_footer btn btn-primary" role="button">DEPOSITE AQUÍ</a></p>
 	</div>
-	<div  class="row">
-	   <div class="container">  
-	     <div class="col-4">
-	       <p> Dirección </p>
+	<div  class="row">	    
+	    <div class="col-4">
+		    <h2> Contacto </h2> 
+	       <h4> Dirección </h4>
 	       <p> Tupungato 10070 Vitacura, Santiago de Chile </p>
-	       <p> Cta. Cte. </p>
+	       <h4> Cta. Cte. </h4>
 	       <p> Banco BCI N° 85999997 </p>
-	       <p> Teléfonos </p>
+	       <h4> Teléfonos </p>
 	       <p> 22170821 - 22170811 / 22170820 </p>
-	       <p> RUT </p>
+	       <h4> RUT </h4>
 	       <p> 72.169.900-5 </p>
-	       <p> Email </p>
+	       <h4> Email </h4>
 	       <p> fundacion@ninoycancer.cl </p>
-	       <p> Facebook Twitter Instagram </p>
+	       <p class="networks"><a href="#"><i class="fab fa-facebook-f"></i></a>    <a href="#"><i class="fab fa-twitter"></i>   <a href="#"></i> <i class="fab fa-instagram"></i></a> </p>
 	     </div>
 	    <div class="col-8">
 	     	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060796576!2d-70.53933968519188!3d-33.38387450148384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530752339718" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-	     </div>	
-	   </div>
+	     </div>		  
 	</div> 
 </div><!--Footer-->
 
