--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <h2> Fundacion Niño y Cáncer </h2>
     <p> El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y fortaleciendo su integración social y familiar.</p>
     <p>En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para atender solamente a niños con cáncer. </p> 
+    <p> La fundación está convencida que para derrotar el cáncer no sólo hay que preocuparse de curar el cuerpo de los pacientes. El espíritu también se ve afectado y para salir adelante es esencial querer curarse. </p>
     </div> 
 </div><!--Fundacion-->
 
@@ -89,6 +90,7 @@
   <div class="container">
 
     <h2> Noticias </h2>
+    <p> Son muy importantes los programas recreativos, los cuales ayudan a superar los sufrimientos y mantener vivo el deseo de curarse. </p>
 
    <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
