--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img class="logo" src="../src/images/logo_2.png" alt="logo fundación niño y cáncer"></a>
+      <a class="navbar-brand" href="index.html"><img class="logo" src="../src/images/logo_2.png" alt="logo fundación niño y cáncer"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"> Nosotros </a></li>
-        <li><a href="#"> Noticias </a></li>
+        <li><a href="nosotros.html"> Nosotros </a></li>
+        <li><a href="noticias.html"> Noticias </a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
