Modificando header de index y noticias

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h1> Con tu apoyo,<br> yo le gano al cáncer </h1> 
     <p> La <strong>Fundación Niño y Cáncer</strong> es una entidad sin fines de lucro<br> que nació para ser un importante apoyo en el tratamiento<br> integral de los niños con cáncer.</p>
   </div>
-</div><!--Navbar-->
+</div><!--Hero-->
 
 <!--CALL-->
 <div class="call container-fluid">
