--- a/noticias.html
+++ b/noticias.html
@@ -47,7 +47,39 @@
   </div><!-- /.container-fluid -->
 </nav><!--Navbar-->
 
+<!--Hero-->
+<div class="header_noticias"> 
+  <div class="container-fluid">
+    <div class="container">
+       <h1> Con tu apoyo,<br> yo le gano al cáncer </h1> 
+        <p> La <strong>Fundación Niño y Cáncer</strong> es una entidad sin fines de lucro<br> que nació para ser un importante apoyo en el tratamiento<br> integral de los niños con cáncer.</p>
+    </div>
+  </div>
+</div><!--Hero-->
 
+<div class="aticulo">
+  <div class="container">
+    <div class="row">
+      <div class="col-8">
+        <h2> Noticias </h2>
+        <p> 3 Julio 2018 </p>
+        <h3> Inauguración y restructuración de la Unidad de Oncología Pediátrica de Concepción. Otro gran logro de la Fundación Niño y Cáncer </h3>
+        <h4> La Fundación Niño y Cáncer es una entidad sin fines de lucro que nació para ser un importante apoyo en el tratamiento integral de los niños con cáncer. </h4>
+        <p> En estos 67 años la medicina ha cambiado, los tipos de pacientes han cambiado y las instalaciones se han ido haciendo obsoletas y poco acogedoras. En el año 1944 nadie pensaba que un niño con cáncer se podía curar, hoy se cura el 70 a 80%. </p>
+        <p> En los años previos el área Norte del 5to piso del Hospital estaba destinada a la atención de pacientes con alta mortalidad por patología infecciosas o de otro tipo y era conocida como “Siberia” y era mas bien un área dentro del Hospital a quien nade le gustaría estar  por  sombrío y poco acogedor . Posteriormente pasa a ser la Unidad De Oncología y hoy después de esta remodelación es sin duda el lugar más bonito, más alegre y más acogedor de todo el Hospital. </p>
+        <p> A la Fundación Niño y Cáncer se nos pidió a fines del año pasado una ayuda para comprar cortinas para la Unidad De Oncología Pediátrica de Concepción. En una visita en terreno nos dimos cuenta que las necesidades de esa Unidad eran mucho mayores y ofrecimos hacer una remodelación  completa como la que ahora podemos ver. Los trabajos se iniciaron en Enero 2011 y terminaron el 02 Mayo 2011 y fueron ejecutados en forma eficiente y con un  gran compromiso y cariño por Eduardo Vivallos y su Empresa Constructora. </p>
+        <p> La Fundación Niño y Cáncer aportó todos los recursos económicos que fueron alrededor de 170 millones de pesos y también   algunas ideas sobre distribución infraestructura y mejor aprovechamiento de los espacios. </p>
+        <p> Ha quedado con 16 camas que en número  son igual o  más que los Hospitales grandes de Santiago. Estas 16 camas  son normalizadas con estándar 9.5 Richter, climatizadas con aire filtrado y presión positiva. Se renovaron las camas, que ahora son eléctricas , se cambiaron los veladores , se habilitó baños diferenciados para niños, niñas y discapacitados, se mejoró las áreas limpias y sucias y el área de procedimientos.    Ha quedado con instalaciones para el personal paramédico, enfermería y personal médico. Ha quedado con sala de procedimientos, sala para educadoras y psicólogas y sala de estar para familiaresEl miércoles 18 de mayo 2011  inauguramos la remodelación de esta Unidad. Muchos fueron los sentimientos en ese emotivo acto.  La sensación de haber cumplido con un compromiso muy grande para la Fundación, un compromiso que en nuestros inicios no soñábamos. </p>
+        <p> Este 18 de Mayo de 2011, como Presidente de la Fundación y acompañado por Carolina Escudero, Carlos Ossa y Daniel Lyon en representación de nuestra Institución viajamos a Concepción y fuimos recibidos por el  Equipo Médico de Oncología Pediátrica Dres. Eduardo Fernández, Jaime Rojas y Patricia Lefort quienes nos condujeron a una bienvenida con desayuno ofrecido por el Director del hospital acompañado por su equipo de trabajo. Posteriormente alrededor de la 11 horas fuimos a una ceremonia en el Auditorio del Hospital donde había más de 100 personas entre médicos, enfermeras, psicólogas, voluntarias,  pacientes con sus padres  y autoridades regionales  y de Salud. Después de algunos discursos de agradecimientos a la Fundación  se presentó un show con la participación de grupos de niños de la Unidad de Oncología que fueron muy emotivamente aplaudidos por la concurrencia. </p>
+        <p> Como Presidente me correspondió dirigir algunas palabras  recalcando nuestra satisfacción  por ese proyecto  concluido y que va en beneficio directo de los niños con cáncer y no solo dirigido a las dolencias del cuerpo sino también a las dolencias del alma, ya que el ser tratado en un lugar tan bonito indudablemente alegra el espíritu y contribuye a aumentar las posibilidades de curación. Posteriormente el Capellán de Hospital bendijo las salas de hospitalizados. </p>
+        <p> Este 18 de Mayo ver una preciosa Unidad, de muy lindos colores elegidos  para niños, no solo en los muros sino en los muebles,  pisos y techos, con aire acondicionado, con filtros de alta eficacia que impiden el ingreso de bacterias y microorganismos, con red de oxígeno. Ver unos lindos y coloridos  baños. Ver unas camas eléctricas preciosas. Sentir que esos niños están siendo atendidos con el mejor nivel de instalaciones, que nada tienen que envidiar a otras instalaciones del área privada o de  países desarrollaos  nos llena de orgullo. </p>
+        <p> Ese orgullo también estaba presente en el Equipo Médico, en los Jefes de Servicio de Pediatría, Subdirector y Director de Hospital así como también en las autoridades regionales de Salud Concepción, SEREMI de Salud y representantes del Intendente.  Es orgullo también estaba presente en los niños con cáncer y sus padres  que el día anterior a la inauguración, cuando se hospitalizaron en esas modernas salas por primera vez rompieron en aplausos al ingresar….Creo que con orgullo y humildad podemos decir: Concepción misión cumplida! </p>
+        <p> Dr. Juan A. Quintana B. </p>
+        <p> Presidente Fundación Niño y Cáncer. </p>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
