noticias.html terminado

--- a/noticias.html
+++ b/noticias.html
@@ -57,12 +57,12 @@
   </div>
 </div><!--Hero-->
 
-<div class="aticulo">
+<div class="articulo">
   <div class="container">
     <div class="row">
       <div class="col-8">
         <h2> Noticias </h2>
-        <p> 3 Julio 2018 </p>
+        <p class="date"> 3 Julio 2018 </p>
         <h3> Inauguración y restructuración de la Unidad de Oncología Pediátrica de Concepción. Otro gran logro de la Fundación Niño y Cáncer </h3>
         <h4> La Fundación Niño y Cáncer es una entidad sin fines de lucro que nació para ser un importante apoyo en el tratamiento integral de los niños con cáncer. </h4>
         <p> En estos 67 años la medicina ha cambiado, los tipos de pacientes han cambiado y las instalaciones se han ido haciendo obsoletas y poco acogedoras. En el año 1944 nadie pensaba que un niño con cáncer se podía curar, hoy se cura el 70 a 80%. </p>
@@ -74,8 +74,7 @@
         <p> Como Presidente me correspondió dirigir algunas palabras  recalcando nuestra satisfacción  por ese proyecto  concluido y que va en beneficio directo de los niños con cáncer y no solo dirigido a las dolencias del cuerpo sino también a las dolencias del alma, ya que el ser tratado en un lugar tan bonito indudablemente alegra el espíritu y contribuye a aumentar las posibilidades de curación. Posteriormente el Capellán de Hospital bendijo las salas de hospitalizados. </p>
         <p> Este 18 de Mayo ver una preciosa Unidad, de muy lindos colores elegidos  para niños, no solo en los muros sino en los muebles,  pisos y techos, con aire acondicionado, con filtros de alta eficacia que impiden el ingreso de bacterias y microorganismos, con red de oxígeno. Ver unos lindos y coloridos  baños. Ver unas camas eléctricas preciosas. Sentir que esos niños están siendo atendidos con el mejor nivel de instalaciones, que nada tienen que envidiar a otras instalaciones del área privada o de  países desarrollaos  nos llena de orgullo. </p>
         <p> Ese orgullo también estaba presente en el Equipo Médico, en los Jefes de Servicio de Pediatría, Subdirector y Director de Hospital así como también en las autoridades regionales de Salud Concepción, SEREMI de Salud y representantes del Intendente.  Es orgullo también estaba presente en los niños con cáncer y sus padres  que el día anterior a la inauguración, cuando se hospitalizaron en esas modernas salas por primera vez rompieron en aplausos al ingresar….Creo que con orgullo y humildad podemos decir: Concepción misión cumplida! </p>
-        <p> Dr. Juan A. Quintana B. </p>
-        <p> Presidente Fundación Niño y Cáncer. </p>
+        <p class="author"><strong> Dr. Juan A. Quintana B. </strong><br> Presidente Fundación Niño y Cáncer.</p>
       </div>
     </div>
   </div>
