Arreglando detalles de noticias.html

--- a/noticias.html
+++ b/noticias.html
@@ -62,7 +62,7 @@
     <div class="row">
       <div class="col-8">
         <h2> Noticias </h2>
-        <p class="date"> 3 Julio 2018 </p>
+        <p class="date"><i class="far fa-calendar-alt"></i>   3 Julio 2018 </p>
         <h3> Inauguración y restructuración de la Unidad de Oncología Pediátrica de Concepción. Otro gran logro de la Fundación Niño y Cáncer </h3>
         <h4> La Fundación Niño y Cáncer es una entidad sin fines de lucro que nació para ser un importante apoyo en el tratamiento integral de los niños con cáncer. </h4>
         <p> En estos 67 años la medicina ha cambiado, los tipos de pacientes han cambiado y las instalaciones se han ido haciendo obsoletas y poco acogedoras. En el año 1944 nadie pensaba que un niño con cáncer se podía curar, hoy se cura el 70 a 80%. </p>
