Comentando archivos noticias.html y nosotros.html

--- a/nosotros.html
+++ b/nosotros.html
@@ -47,11 +47,36 @@
   </div><!-- /.container-fluid -->
 </nav><!--Navbar-->  
 
+<!--Hero-->
+<div class="header_nosotros"> 
+  <div class="container-fluid">
+    <div class="container">
+       <h1> Con tu apoyo,<br> yo le gano al cáncer </h1> 
+        <p> La <strong>Fundación Niño y Cáncer</strong> es una entidad sin fines de lucro<br> que nació para ser un importante apoyo en el tratamiento<br> integral de los niños con cáncer.</p>
+    </div>
+  </div>
+</div><!--Hero-->
 
-
-
-
-
+<!--Nosotros-->
+<div class="nosotros">
+  <div class="container">
+    <div class="row">
+      <div class="col-8">
+        <h2> Nosotros </h2>
+        <p> La Fundación Niño y Cáncer es una entidad sin fines de lucro que nació para ser un importante apoyo en el tratamiento integral de los niños con cáncer o leucemia atendidos en el Sistema Público del país (Plan AUGE y GES) mejorando su calidad de vida y fortaleciendo su integración social y familiar.
+        </p>
+        <p> Sus objetivos principales son: </p>
+        <ul>
+          <li> Apoyar el tratamiento  de la enfermedad. </li>
+          <li> Generamos espacios de recreación y mejoramos la calidad de vida del niño durante y después de su tratamiento. </li>
+          <li> Rehabilitamos al niño tratado y posteriormente lo integramos a la  sociedad (Becas de Estudios). </li>
+          <li> Damos apoyo social y solidario a la familia del niño (Departamentos de Acogida, almuerzo para padres de niños hospitalizados, Cenas de Navidad, etc.). </li>
+        </ul>
+        <p> Necesitamos la colaboración solidaria  de la comunidad, para lograr transformar la cara triste de la enfermedad en una cara feliz con esperanzas para estos pequeños que luchan día a día por su vida. </p>
+      </div>
+    </div>
+  </div>
+</div><!--Nosotros-->
 
 <!--Footer-->
 <div class="footer">
