--- a/noticias.html
+++ b/noticias.html
@@ -57,6 +57,7 @@
   </div>
 </div><!--Hero-->
 
+<!--Articulo-->
 <div class="articulo">
   <div class="container">
     <div class="row">
@@ -78,9 +79,7 @@
       </div>
     </div>
   </div>
-</div>
-
-
+</div><!--Articulo-->
 
 <!--Footer-->
 <div class="footer">
