--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
 <!--Hero-->
 <div class="header"> 
-  <div class="container-fluid">
-    <h1> Con tu apoyo,<br> yo le gano al cáncer </h1> 
+  <div class="container">
+    <h1> Con tu apoyo, yo le gano al cáncer </h1> 
     <p> La <strong>Fundación Niño y Cáncer</strong> es una entidad sin fines de lucro<br> que nació para ser un importante apoyo en el tratamiento<br> integral de los niños con cáncer.</p>
   </div>
 </div><!--Hero-->
@@ -151,8 +151,8 @@
 	       <p> fundacion@ninoycancer.cl </p>
 	       <p class="networks"><a href="#"><i class="fab fa-facebook-f"></i></a>    <a href="#"><i class="fab fa-twitter"></i>   <a href="#"></i> <i class="fab fa-instagram"></i></a> </p>
 	     </div>
-	    <div class="col-8">
-	     	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060796576!2d-70.53933968519188!3d-33.38387450148384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530752339718" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+	    <div class="col-8" class="embed-responsive embed-responsive-16by9">
+	     	<iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060796576!2d-70.53933968519188!3d-33.38387450148384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530752339718" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 	     </div>		  
 	</div> 
 </div><!--Footer-->
