--- a/nosotros.html
+++ b/nosotros.html
@@ -60,23 +60,37 @@
 <!--Nosotros-->
 <div class="nosotros">
   <div class="container">
-    <div class="row">
-      <div class="col-8">
-        <h2> Nosotros </h2>
-        <p> La Fundación Niño y Cáncer es una entidad sin fines de lucro que nació para ser un importante apoyo en el tratamiento integral de los niños con cáncer o leucemia atendidos en el Sistema Público del país (Plan AUGE y GES) mejorando su calidad de vida y fortaleciendo su integración social y familiar.
-        </p>
-        <p> Sus objetivos principales son: </p>
-        <ul>
-          <li> Apoyar el tratamiento  de la enfermedad. </li>
-          <li> Generamos espacios de recreación y mejoramos la calidad de vida del niño durante y después de su tratamiento. </li>
-          <li> Rehabilitamos al niño tratado y posteriormente lo integramos a la  sociedad (Becas de Estudios). </li>
-          <li> Damos apoyo social y solidario a la familia del niño (Departamentos de Acogida, almuerzo para padres de niños hospitalizados, Cenas de Navidad, etc.). </li>
-        </ul>
-        <p> Necesitamos la colaboración solidaria  de la comunidad, para lograr transformar la cara triste de la enfermedad en una cara feliz con esperanzas para estos pequeños que luchan día a día por su vida. </p>
-      </div>
+    <div class="row">      
+      <h2> Nosotros </h2>
+         <div class="nosotros_texto">
+          <p> La Fundación Niño y Cáncer es una entidad sin fines de lucro que nació para ser un importante apoyo en el tratamiento integral de los niños con cáncer o leucemia atendidos en el Sistema Público del país (Plan AUGE y GES) mejorando su calidad de vida y fortaleciendo su integración social y familiar.
+          </p>
+          <p> Sus objetivos principales son: </p>
+          <ul>
+            <li> Apoyar el tratamiento  de la enfermedad. </li>
+            <li> Generamos espacios de recreación y mejoramos la calidad de vida del niño durante y después de su tratamiento. </li>
+            <li> Rehabilitamos al niño tratado y posteriormente lo integramos a la  sociedad (Becas de Estudios). </li>
+            <li> Damos apoyo social y solidario a la familia del niño (Departamentos de Acogida, almuerzo para padres de niños hospitalizados, Cenas de Navidad, etc.). </li>
+          </ul>
+          <p> Necesitamos la colaboración solidaria  de la comunidad, para lograr transformar la cara triste de la enfermedad en una cara feliz con esperanzas para estos pequeños que luchan día a día por su vida. </p>
+        </div>
     </div>
   </div>
 </div><!--Nosotros-->
+
+<!--Imagenes-->
+<div class="imagenes">
+  <div class="row">
+    <div class="container">      
+        <img src="../src/images/cena2.jpg" alt="">
+        <img src="../src/images/Pict0003.jpg" alt="">
+        <img src="../src/images/Pict0004.jpg" alt="">
+        <img src="../src/images/Pict0005.jpg" alt="">
+        <img src="../src/images/esqui.jpg" alt="">
+        <img src="../src/images/torneo23.jpg" alt="">
+    </div>    
+  </div>
+</div><!--Imagenes-->
 
 <!--Footer-->
 <div class="footer">
@@ -86,7 +100,7 @@
  </p>
     <p><a href="#" class="btn_footer btn btn-primary" role="button">DEPOSITE AQUÍ</a></p>
   </div>
-  <div  class="row">      
+  <div class="row">      
       <div class="col-4">
         <h2> Contacto </h2> 
          <h4> Dirección </h4>
@@ -100,7 +114,7 @@
          <h4> Email </h4>
          <p> fundacion@ninoycancer.cl </p>
          <p class="networks"><a href="#"><i class="fab fa-facebook-f"></i></a>    <a href="#"><i class="fab fa-twitter"></i>   <a href="#"></i> <i class="fab fa-instagram"></i></a> </p>
-       </div>
+      </div>
       <div class="col-8">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060796576!2d-70.53933968519188!3d-33.38387450148384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530752339718" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
        </div>     
