--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title> Fundacion Niño y Cancer </title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -25,136 +26,139 @@
   
 <!--Navbar-->  
 <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="index.html"><img class="logo" src="../src/images/logo_2.png" alt="logo fundación niño y cáncer"></a>
-    </div>
+	<div class="container">
+	    <!-- Brand and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+		    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		    </button>
+	      	<a class="navbar-brand" href="index.html"><img class="img-fluid" src="../src/images/logo_2.png" alt="logo fundación niño y cáncer"></a>
+	    </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="nosotros.html"> Nosotros </a></li>
-        <li><a href="noticias.html"> Noticias </a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		    <ul class="nav navbar-nav navbar-right">
+		        <li><a href="nosotros.html"> Nosotros </a></li>
+		        <li><a href="noticias.html"> Noticias </a></li>
+		    </ul>
+	    </div><!-- /.navbar-collapse -->
+	</div><!-- /.container-fluid -->
 </nav><!--Navbar-->
 
 <!--Hero-->
 <div class="header"> 
-  <div class="container">
-    <h1> Con tu apoyo, yo le gano al cáncer </h1> 
-    <p> La <strong>Fundación Niño y Cáncer</strong> es una entidad sin fines de lucro<br> que nació para ser un importante apoyo en el tratamiento<br> integral de los niños con cáncer.</p>
-  </div>
+	<div class="container">
+	    <h1> Con tu apoyo,<br> yo le gano al cáncer </h1> 
+	    <p> La <strong>Fundación Niño y Cáncer</strong> es una entidad sin fines de lucro<br> que nació para ser un importante apoyo en el tratamiento<br> integral de los niños con cáncer.</p>
+	</div>
 </div><!--Hero-->
 
 <!--CALL-->
-<div class="call container-fluid">
+<div class="call">
   <!--<div class="container">-->
     <div class="row">
 	    <div class="container">
-		      <div class="col-2">
-		        <img class="img-responsive" src="../src/images/phone.svg" alt="icono de teléfono">
-		      </div>
-		      <div class="col-6">
+		    <div class="col-sm-6 col-md-2">
+		        <p><img class="img-responsive" src="../src/images/phone.svg" alt="icono de teléfono"></p>
+		    </div>
+		    <div class="col-sm-6 col-md-6">
 		        <p class="call__left-1"> Call center </p>
 		        <p class="call__left-2"> Colabora a través de tu cuenta de teléfono </p>
-		      </div>
-		      <div class="col-4">
-		        <p class="call__right"> 2 29478800 </p>
-		      </div>
 		    </div>
-	    </div>  
-  </div>
+		    <div class="col-sm-6 col-md-4">
+		        <p class="call__right"> 2 29478800 </p>
+		    </div>
+		</div>
+	</div>    
 </div><!--CALL-->
 
 <!--Fundacion-->
 <div class="fundacion">
-  <div class="container">
-    <h2> Fundacion Niño y Cáncer </h2>
-    <p> El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y fortaleciendo su integración social y familiar.</p>
-    <p>En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para atender solamente a niños con cáncer. </p> 
-    <p> La fundación está convencida que para derrotar el cáncer no sólo hay que preocuparse de curar el cuerpo de los pacientes. El espíritu también se ve afectado y para salir adelante es esencial querer curarse. </p>
-    </div> 
+	<div class="container">
+	    <h2> Fundacion Niño y Cáncer </h2>
+	    <p> El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y fortaleciendo su integración social y familiar.</p>
+	    <p>En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para atender solamente a niños con cáncer. </p> 
+	    <p> La fundación está convencida que para derrotar el cáncer no sólo hay que preocuparse de curar el cuerpo de los pacientes. El espíritu también se ve afectado y para salir adelante es esencial querer curarse. </p>
+	</div> 
 </div><!--Fundacion-->
 
 <!--Content-->
 <div class="row content">
-  <div class="container">
+  	<div class="container">
+	   <h2> Noticias </h2>
+	   <p> Son muy importantes los programas recreativos, los cuales ayudan a superar los sufrimientos y mantener vivo el deseo de curarse. </p>
+		<div class="col-sm-6 col-md-4">
+		    <div class="thumbnail">
+		      <img class="img-responsive" src="../src/images/IMG_1938.JPG" alt="">
+			      <div class="caption">
+				        <h3> Renovación de Unidades de Oncología Infantil </h3>
+				        <p> El Hospital Guillermo Gran Benavente se inauguró en 1944, después del gran terremoto de 1939. Atiende a los pacientes de la 8ª Región recibiendo   unos 60 a 70 pacientes con cáncer o leucemia nuevos por año, lo que es comparable con los grandes hospitales pediátricos de Santiago. </p>
+				        <p class="thumbnail_p"><a href="#" class="btn_content btn btn-primary" role="button">Leer más</a></p>
+			      </div>
+		    </div>
+		</div>
 
-    <h2> Noticias </h2>
-    <p> Son muy importantes los programas recreativos, los cuales ayudan a superar los sufrimientos y mantener vivo el deseo de curarse. </p>
+		<div class="col-sm-6 col-md-4">
+		    <div class="thumbnail">
+		      <img class="img-responsive" src="../src/images/ski.jpg" alt="...">
+		      <div class="caption">
+		        <h3> Montaña de la Alegría 2017. Taller de ski.</h3>
+		        <p> Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002. Se traduce en "Una Terapia para el Alma". Se realizó como todos los años en Portillo del 21 al 25 de agosto y contó con la participación de 7 jóvenes chilenos, 2 ecuatorianos y 1 de España. Todos amputados de una extremidad inferior.</p>
+		        <p class="thumbnail_p"><a href="#" class="btn_content btn btn-primary" role="button">Leer más</a></p>
+		      </div>
+		    </div>
+		</div>
 
-   <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img class="img-responsive" src="../src/images/IMG_1938.JPG" alt="">
-      <div class="caption">
-        <h3> Renovación de Unidades de Oncología Infantil </h3>
-        <p> El Hospital Guillermo Gran Benavente se inauguró en 1944, después del gran terremoto de 1939. Atiende a los pacientes de la 8ª Región recibiendo   unos 60 a 70 pacientes con cáncer o leucemia nuevos por año, lo que es comparable con los grandes hospitales pediátricos de Santiago. </p>
-        <p class="thumbnail_p"><a href="#" class="btn_content btn btn-primary" role="button">Leer más</a></p>
-      </div>
-    </div>
-  </div>
-
-   <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img class="img-responsive" src="../src/images/ski.jpg" alt="...">
-      <div class="caption">
-        <h3> Montaña de la Alegría 2017. Taller de ski.</h3>
-        <p> Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002. Se traduce en "Una Terapia para el Alma". Se realizó como todos los años en Portillo del 21 al 25 de agosto y contó con la participación de 7 jóvenes chilenos, 2 ecuatorianos y 1 de España. Todos amputados de una extremidad inferior.</p>
-        <p class="thumbnail_p"><a href="#" class="btn_content btn btn-primary" role="button">Leer más</a></p>
-      </div>
-    </div>
-  </div>
-
-   <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img class="img-responsive" src="../src/images/revivir2.jpg" alt="...">
-      <div class="caption">
-        <h3> Agredecimiento del grupo "Aprendiendo a revivir" </h3>
-        <p> En el año 2009, comenzamos a realizar reuniones trimestrales con los padres cuyos hijos habían fallecido a causa del cáncer infantil; al principio fue muy dificil, no sabíamos muy bien que ibamos a hacer, ni como lo ibamos a llevar a cabo. Al mes de noviembre del 2014, hemos realizado 18 encuentros. </p>
-        <p class="thumbnail_p"><a href="#" class="btn_content btn btn-primary" role="button">Leer más</a></p>
-      </div>
-    </div>
-  </div>
-       
-  </div>
+		<div class="col-sm-6 col-md-4">
+		    <div class="thumbnail">
+		      <img class="img-responsive" src="../src/images/revivir2.jpg" alt="...">
+		      <div class="caption">
+		        <h3> Agredecimiento del grupo "Aprendiendo a revivir" </h3>
+		        <p> En el año 2009, comenzamos a realizar reuniones trimestrales con los padres cuyos hijos habían fallecido a causa del cáncer infantil; al principio fue muy dificil, no sabíamos muy bien que ibamos a hacer, ni como lo ibamos a llevar a cabo. Al mes de noviembre del 2014, hemos realizado 18 encuentros. </p>
+		        <p class="thumbnail_p"><a href="#" class="btn_content btn btn-primary" role="button">Leer más</a></p>
+		      </div>
+		    </div>
+		</div>       
+  	</div>
 </div><!--Content-->
 
 <!--Footer-->
-<div class="footer">
+<div class="footer">	
 	<div class="footer__titulo">
 		<h2> Haga su donación </h2>
 		<p> Realiza ahora tu donación en línea a través del sistema Web Pay Plus de Transbank aportando con tu tarjeta de crédito Visa, Master Card y Magna. o Debito (Redcompra).
  		</p>
 		<p><a href="#" class="btn_footer btn btn-primary" role="button">DEPOSITE AQUÍ</a></p>
 	</div>
-	<div  class="row">	    
-	    <div class="col-4">
-		    <h2> Contacto </h2> 
-	       <h4> Dirección </h4>
-	       <p> Tupungato 10070 Vitacura, Santiago de Chile </p>
-	       <h4> Cta. Cte. </h4>
-	       <p> Banco BCI N° 85999997 </p>
-	       <h4> Teléfonos </p>
-	       <p> 22170821 - 22170811 / 22170820 </p>
-	       <h4> RUT </h4>
-	       <p> 72.169.900-5 </p>
-	       <h4> Email </h4>
-	       <p> fundacion@ninoycancer.cl </p>
-	       <p class="networks"><a href="#"><i class="fab fa-facebook-f"></i></a>    <a href="#"><i class="fab fa-twitter"></i>   <a href="#"></i> <i class="fab fa-instagram"></i></a> </p>
-	     </div>
-	    <div class="col-8" class="embed-responsive embed-responsive-16by9">
-	     	<iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060796576!2d-70.53933968519188!3d-33.38387450148384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530752339718" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-	     </div>		  
-	</div> 
+
+	<div class="row">
+		<div class="container">	
+		    <div class="col-4">
+			   <h2> Contacto </h2> 
+		       <h4> Dirección </h4>
+		       <p> Tupungato 10070 Vitacura, Santiago de Chile </p>
+		       <h4> Cta. Cte. </h4>
+		       <p> Banco BCI N° 85999997 </p>
+		       <h4> Teléfonos </h4>
+		       <p> 22170821 - 22170811 / 22170820 </p>
+		       <h4> RUT </h4>
+		       <p> 72.169.900-5 </p>
+		       <h4> Email </h4>
+		       <p> fundacion@ninoycancer.cl </p>
+		       <p class="networks">
+			       <a href="#"><i class="fab fa-facebook-f"></i></a>
+			       <a href="#"><i class="fab fa-twitter"></i></a>
+			       <a href="#"><i class="fab fa-instagram"></i></a> 
+		       </p>
+		    </div>
+		    <div class="col-8">
+		     	<iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060796576!2d-70.53933968519188!3d-33.38387450148384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530752339718" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+		    </div>	
+		</div>
+	</div>  
 </div><!--Footer-->
 
 
