--- a/noticias.html
+++ b/noticias.html
@@ -25,7 +25,7 @@
   
 <!--Navbar-->  
 <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -34,7 +34,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img class="logo" src="../src/images/logo_2.png" alt="logo fundación niño y cáncer"></a>
+      <a class="navbar-brand" href="index.html"><img class="img-fluid" src="../src/images/logo_2.png" alt="logo fundación niño y cáncer"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
