--- a/noticias.html
+++ b/noticias.html
@@ -61,7 +61,8 @@
 <div class="articulo">
   <div class="container">
     <div class="row">
-      <div class="col-8">
+      <div class="col-md-2"></div>
+      <div class="col-md-8"">
         <h2> Noticias </h2>
         <p class="date"><i class="far fa-calendar-alt"></i>   3 Julio 2018 </p>
         <h3> Inauguración y restructuración de la Unidad de Oncología Pediátrica de Concepción. Otro gran logro de la Fundación Niño y Cáncer </h3>
@@ -82,32 +83,39 @@
 </div><!--Articulo-->
 
 <!--Footer-->
-<div class="footer">
+<div class="footer">  
   <div class="footer__titulo">
     <h2> Haga su donación </h2>
     <p> Realiza ahora tu donación en línea a través del sistema Web Pay Plus de Transbank aportando con tu tarjeta de crédito Visa, Master Card y Magna. o Debito (Redcompra).
     </p>
     <p><a href="#" class="btn_footer btn btn-primary" role="button">DEPOSITE AQUÍ</a></p>
   </div>
-  <div  class="row">      
-      <div class="col-4">
-        <h2> Contacto </h2> 
-         <h4> Dirección </h4>
-         <p> Tupungato 10070 Vitacura, Santiago de Chile </p>
-         <h4> Cta. Cte. </h4>
-         <p> Banco BCI N° 85999997 </p>
-         <h4> Teléfonos </p>
-         <p> 22170821 - 22170811 / 22170820 </p>
-         <h4> RUT </h4>
-         <p> 72.169.900-5 </p>
-         <h4> Email </h4>
-         <p> fundacion@ninoycancer.cl </p>
-         <p class="networks"><a href="#"><i class="fab fa-facebook-f"></i></a>    <a href="#"><i class="fab fa-twitter"></i>   <a href="#"></i> <i class="fab fa-instagram"></i></a> </p>
-       </div>
-      <div class="col-8">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060796576!2d-70.53933968519188!3d-33.38387450148384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530752339718" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-       </div>     
-  </div> 
+
+  <div class="row">
+    <div class="container"> 
+        <div class="col-md-4 col-sm-12">
+         <h2> Contacto </h2> 
+           <h4> Dirección </h4>
+           <p> Tupungato 10070 Vitacura, Santiago de Chile </p>
+           <h4> Cta. Cte. </h4>
+           <p> Banco BCI N° 85999997 </p>
+           <h4> Teléfonos </h4>
+           <p> 22170821 - 22170811 / 22170820 </p>
+           <h4> RUT </h4>
+           <p> 72.169.900-5 </p>
+           <h4> Email </h4>
+           <p> fundacion@ninoycancer.cl </p>
+           <p class="networks">
+             <a href="#"><i class="fab fa-facebook-f"></i></a>
+             <a href="#"><i class="fab fa-twitter"></i></a>
+             <a href="#"><i class="fab fa-instagram"></i></a> 
+           </p>
+        </div>
+        <div class="col-md-8 col-sm-12">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060796653!2d-70.53933968519183!3d-33.383874501483845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530819407161" width="600" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>  
+    </div>
+  </div>  
 </div><!--Footer-->
 
 
