--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
   <!--<div class="container">-->
     <div class="row">
 	    <div class="container">
-		    <div class="col-sm-6 col-md-2">
+		    <div class="col-xs-12 col-sm-4 col-md-2 ">
 		        <p><img class="img-responsive" src="../src/images/phone.svg" alt="icono de teléfono"></p>
 		    </div>
-		    <div class="col-sm-6 col-md-6">
+		    <div class="col-xs-12 col-sm-8 col-md-6">
 		        <p class="call__left-1"> Call center </p>
 		        <p class="call__left-2"> Colabora a través de tu cuenta de teléfono </p>
 		    </div>
-		    <div class="col-sm-6 col-md-4">
+		    <div class="col-xs-12 col-sm-8 col-md-4">
 		        <p class="call__right"> 2 29478800 </p>
 		    </div>
 		</div>
