--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 	<div class="row">
 		<div class="container">	
-		    <div class="col-md-4 col-sm-12">
+		    <div class="col-md-4 col-sm-5 col-xs-12">
 			   <h2> Contacto </h2> 
 		       <h4> Dirección </h4>
 		       <p> Tupungato 10070 Vitacura, Santiago de Chile </p>
@@ -154,7 +154,7 @@
 			       <a href="#"><i class="fab fa-instagram"></i></a> 
 		       </p>
 		    </div>
-		    <div class="col-md-8 col-sm-12">
+		    <div class="col-md-8 col-sm-7 col-xs-12">
 		     	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060796653!2d-70.53933968519183!3d-33.383874501483845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530819407161" width="600" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 		    </div>	
 		</div>
