Añadiendo imagenes a carpeta images public

--- a/nosotros.html
+++ b/nosotros.html
@@ -34,7 +34,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img class="img-fluid" src="../src/images/logo_2.png" alt="logo fundación niño y cáncer"></a>
+      <a class="navbar-brand" href="index.html"><img class="img-fluid" src="images/logo_2.png" alt="logo fundación niño y cáncer"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -82,12 +82,12 @@
 <div class="imagenes">
   <div class="row">
     <div class="container">      
-        <img src="../src/images/cena2.jpg" alt="Imagen de la fundacion">
-        <img src="../src/images/Pict0003.jpg" alt="Imagen de la fundacion">
-        <img src="../src/images/Pict0004.jpg" alt="Imagen de la fundacion">
-        <img src="../src/images/Pict0005.jpg" alt="Imagen de la fundacion">
-        <img src="../src/images/esqui.jpg" alt="Imagen de la fundacion">
-        <img src="../src/images/torneo23.jpg" alt="Imagen de la fundacion">
+        <img src="images/cena2.jpg" alt="Imagen de la fundacion">
+        <img src="images/Pict0003.jpg" alt="Imagen de la fundacion">
+        <img src="images/Pict0004.jpg" alt="Imagen de la fundacion">
+        <img src="images/Pict0005.jpg" alt="Imagen de la fundacion">
+        <img src="images/esqui.jpg" alt="Imagen de la fundacion">
+        <img src="images/torneo23.jpg" alt="Imagen de la fundacion">
     </div>    
   </div>
 </div><!--Imagenes-->
