--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		    </button>
-	      	<a class="navbar-brand" href="index.html"><img class="img-fluid" src="../src/images/logo_2.png" alt="logo fundación niño y cáncer"></a>
+	      	<a class="navbar-brand" href="index.html"><img class="img-fluid" src="images/logo_2.png" alt="logo fundación niño y cáncer"></a>
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -62,7 +62,7 @@
     <div class="row">
 	    <div class="container">
 		    <div class="col-xs-12 col-sm-4 col-md-2 ">
-		        <p><img class="img-responsive" src="../src/images/phone.svg" alt="icono de teléfono"></p>
+		        <p><img class="img-responsive" src="images/phone.svg" alt="icono de teléfono"></p>
 		    </div>
 		    <div class="col-xs-12 col-sm-8 col-md-6">
 		        <p class="call__left-1"> Call center </p>
@@ -92,7 +92,7 @@
 	   <p> Son muy importantes los programas recreativos, los cuales ayudan a superar los sufrimientos y mantener vivo el deseo de curarse. </p>
 		<div class="col-sm-6 col-md-4">
 		    <div class="thumbnail">
-		      <img class="img-responsive" src="../src/images/IMG_1938.JPG" alt="">
+		      <img class="img-responsive" src="images/IMG_1938.JPG" alt="">
 			      <div class="caption">
 				        <h3> Renovación de Unidades de Oncología Infantil </h3>
 				        <p> El Hospital Guillermo Gran Benavente se inauguró en 1944, después del gran terremoto de 1939. Atiende a los pacientes de la 8ª Región recibiendo   unos 60 a 70 pacientes con cáncer o leucemia nuevos por año, lo que es comparable con los grandes hospitales pediátricos de Santiago. </p>
@@ -103,7 +103,7 @@
 
 		<div class="col-sm-6 col-md-4">
 		    <div class="thumbnail">
-		      <img class="img-responsive" src="../src/images/ski.jpg" alt="...">
+		      <img class="img-responsive" src="images/ski.jpg" alt="...">
 		      <div class="caption">
 		        <h3> Montaña de la Alegría 2017. Taller de ski.</h3>
 		        <p> Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002. Se traduce en "Una Terapia para el Alma". Se realizó como todos los años en Portillo del 21 al 25 de agosto y contó con la participación de 7 jóvenes chilenos, 2 ecuatorianos y 1 de España. Todos amputados de una extremidad inferior.</p>
@@ -114,7 +114,7 @@
 
 		<div class="col-sm-6 col-md-4">
 		    <div class="thumbnail">
-		      <img class="img-responsive" src="../src/images/revivir2.jpg" alt="...">
+		      <img class="img-responsive" src="images/revivir2.jpg" alt="...">
 		      <div class="caption">
 		        <h3> Agredecimiento del grupo "Aprendiendo a revivir" </h3>
 		        <p> En el año 2009, comenzamos a realizar reuniones trimestrales con los padres cuyos hijos habían fallecido a causa del cáncer infantil; al principio fue muy dificil, no sabíamos muy bien que ibamos a hacer, ni como lo ibamos a llevar a cabo. Al mes de noviembre del 2014, hemos realizado 18 encuentros. </p>
