--- a/noticias.html
+++ b/noticias.html
@@ -34,7 +34,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img class="img-fluid" src="../src/images/logo_2.png" alt="logo fundación niño y cáncer"></a>
+      <a class="navbar-brand" href="index.html"><img class="img-fluid" src="images/logo_2.png" alt="logo fundación niño y cáncer"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
