Modificando informacion de nosotros.html

--- a/public/nosotros.html
+++ b/public/nosotros.html
@@ -92,6 +92,85 @@
   </div>
 </div><!--Imagenes-->
 
+<!--Miembros-->
+<div class="organizacion">
+  <div class="container">
+    <div class="row"> 
+      <h3> Organización de la Fundación Niño y Cáncer </h3>
+      <div class="col-xs-12 col-md-4">
+        <h4> Consejo general </h4>
+        <ul>
+          <li>  Dr. Juan Quintana B. </li>
+          <li>  Dra. Anette Becker. </li>
+          <li>  Dra. Victoria Beresi </li>
+          <li>  Dr. Felipe Espinoza C. </li>
+          <li>  Dr. Carlos Rizzardini </li>
+          <li>  Dr. Jaime Rojas </li>
+          <li>  Dr. Eduardo Páez </li>
+          <li>  Sr. Fernando Manns </li>
+          <li>  Sr. Daniel Lyon </li>
+        </ul>
+      </div>
+      <div class="col-xs-12 col-md-4">
+        <h4> Comite Ejecutivo </h4>
+        <ul>
+          <li>  Dr. Juan Quintana B. </li>
+          <li>  Dra. Anette Becker. </li>
+          <li>  Dra. Victoria Beresi </li>
+          <li>  Dr. Felipe Espinoza C. </li>
+          <li>  Dr. Carlos Rizzardini </li>
+          <li>  Dr. Jaime Rojas </li>
+          <li>  Dr. Eduardo Páez </li>
+          <li>  Sr. Fernando Manns </li>
+          <li>  Sr. Daniel Lyon </li>
+        </ul>
+      </div>
+      <div class="col-xs-12 col-md-4">
+        <h4> Directorio Ejecutivo </h4>
+        <ul>
+          <li>  Dr. Juan Quintana B. </li>
+          <li>  Dra. Anette Becker. </li>
+          <li>  Dra. Victoria Beresi </li>
+          <li>  Dr. Felipe Espinoza C. </li>
+          <li>  Dr. Carlos Rizzardini </li>
+          <li>  Dr. Jaime Rojas </li>
+          <li>  Dr. Eduardo Páez </li>
+          <li>  Sr. Fernando Manns </li>
+          <li>  Sr. Daniel Lyon </li>
+        </ul>
+      </div>
+      <div class="col-xs-12 col-md-4 down">
+        <h4> Administración </h4>
+        <ul>
+          <li>  Dr. Juan Quintana B. </li>
+          <li>  Dra. Anette Becker. </li>
+          <li>  Dra. Victoria Beresi </li>
+          <li>  Dr. Felipe Espinoza C. </li>
+          <li>  Dr. Carlos Rizzardini </li>
+          <li>  Dr. Jaime Rojas </li>
+          <li>  Dr. Eduardo Páez </li>
+          <li>  Sr. Fernando Manns </li>
+          <li>  Sr. Daniel Lyon </li>
+        </ul>
+      </div>
+      <div class="col-xs-12 col-md-4 down">
+        <h4> Voluntariado Administrativo </h4>
+        <ul>
+          <li>  Dr. Juan Quintana B. </li>
+          <li>  Dra. Anette Becker. </li>
+          <li>  Dra. Victoria Beresi </li>
+          <li>  Dr. Felipe Espinoza C. </li>
+          <li>  Dr. Carlos Rizzardini </li>
+          <li>  Dr. Jaime Rojas </li>
+          <li>  Dr. Eduardo Páez </li>
+          <li>  Sr. Fernando Manns </li>
+          <li>  Sr. Daniel Lyon </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!--Footer-->
 <div class="footer">  
   <div class="footer__titulo">
