Ultima informacion editada

--- a/public/nosotros.html
+++ b/public/nosotros.html
@@ -99,6 +99,7 @@
       <h3> Organización de la Fundación Niño y Cáncer </h3>
       <div class="col-xs-12 col-md-4">
         <h4> Consejo general </h4>
+        <p> Este consejo sobre la base de un conocimiento técnico acabado de la enfermedad a nivel nacional e internacional, dan las líneas generales del trabajo de la Fundación. </p>
         <ul>
           <li>  Dr. Juan Quintana B. </li>
           <li>  Dra. Anette Becker. </li>
@@ -112,7 +113,8 @@
         </ul>
       </div>
       <div class="col-xs-12 col-md-4">
-        <h4> Comite Ejecutivo </h4>
+        <h4> Comité Ejecutivo </h4>
+        <p> Responsable directo del manejo de la Fundación. </p>
         <ul>
           <li>  Dr. Juan Quintana B. </li>
           <li>  Dra. Anette Becker. </li>
@@ -127,6 +129,7 @@
       </div>
       <div class="col-xs-12 col-md-4">
         <h4> Directorio Ejecutivo </h4>
+        <p> Está integrado por un grupo de profesionales y empresarios de reconocida trayectoria, cuyo principal objetivo es la obtención de recursos para los distintos proyectos. </p>
         <ul>
           <li>  Dr. Juan Quintana B. </li>
           <li>  Dra. Anette Becker. </li>
@@ -141,6 +144,7 @@
       </div>
       <div class="col-xs-12 col-md-4 down">
         <h4> Administración </h4>
+        <p> La administración de la Fundación está a cargo de la Asistente Ejecutiva del Directorio, quien coordina las diferentes acciones que realiza la Fundación. </p>
         <ul>
           <li>  Dr. Juan Quintana B. </li>
           <li>  Dra. Anette Becker. </li>
